# ZFB

./: .gitignore  BUILD.md  BUSINESS.md  CMakeLists.txt  LICENSE  README.md  comb.sh  main.c
.github/workflows/: cmake-multi-platform.yml
src/: main.c  zfb.c
src/engine/: CMakeLists.txt  engine.c  event.c  key_input.c
src/engine/key_input/: linux.c  windows.c
src/headers/: .renderer.h.swp  ZFB.h  engine.h  event.h  key_input.h  renderer.h  zfb.h
src/renderer/: .renderer.c.swp  CMakeLists.txt  linux.c  renderer.c  rendererLinux.h  rendererWin.h  windows.c
winbuild/: CMakeCache.txt
